--- a/index.html
+++ b/index.html
@@ -604,6 +604,39 @@
     <img src="./assets/img/iPhone15.png" alt="">
   </section>
 
+  <footer class="container-2 footer">
+    <div class="left-content">
+      <div class="menu">
+        <h1>Menu</h1>
+        <a href="">Home</a>
+        <a href="">Receitas</a>
+        <a href="">Comunidade</a>
+        <a href="">Sobre nós</a>
+      </div>
+      <div class="categorias">
+        <h1>Categorias</h1>
+        <a href="">Café da manhã</a>
+        <a href="">Lanches</a>
+        <a href="">Bebidas</a>
+        <a href="">Sobremesa</a>
+      </div>
+      <div class="social">
+        <h1>Redes Sociais</h1>
+        <a href="">Instagram</a>
+        <a href="">Twitter</a>
+        <a href="">Youtube</a>
+        <a href="">Facebook</a>
+      </div>
+    </div>
+    <div class="right-content">
+      <h1>Assine a nossa newsletter</h1>
+      <form>
+        <input type="email" placeholder="Digite seu e-mail">
+        <button>Assinar</button>
+      </form>
+    </div>
+  </footer>
+
   <script src="./assets/script/script.js"></script>
 </body>
 
