adicionando menu mobile

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="description"
+    content="Cozinhar de forma divertida é facil, liberte o seu chef interior com nossas deliciosas receitas">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600;700&display=swap" rel="stylesheet">
@@ -22,6 +24,11 @@
       </svg>
       ReceitasWeb
     </a>
+    <div class="mobile-menu">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </div>
 
     <nav class="menu-nav">
       <ul class="menu-ul">
@@ -29,6 +36,7 @@
         <li><a href="#">Receitas</a></li>
         <li><a href="#">Comunidade</a></li>
         <li><a href="#">Sobre</a></li>
+        <li><a href="#">Login</a></li>
       </ul>
     </nav>
 
