adicionando efeito de girar no menu mobile quando estiver ativo

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li><a href="#">Receitas</a></li>
         <li><a href="#">Comunidade</a></li>
         <li><a href="#">Sobre</a></li>
-        <li><a href="#">Login</a></li>
+        <li class="login"><a href="#">Login</a></li>
       </ul>
     </nav>
 
