--- a/index.html
+++ b/index.html
@@ -645,6 +645,22 @@
     </div>
   </footer>
 
+  <div class="modal-login">
+    <div class="modal-login-content">
+      <div class="modal-login-header">
+        <h1>Faça seu login</h1>
+        <button class="close-modal">x</button>
+      </div>
+      <form>
+        <label for="email">E-mail</label>
+        <input type="email" id="email" placeholder="Digite seu e-mail">
+        <label for="password">Senha</label>
+        <input type="password" id="password" placeholder="Digite sua senha">
+        <button>Entrar</button>
+      </form>
+    </div>
+  </div>
+
   <script src="./assets/script/script.js"></script>
 </body>
 
