arrumando posicionamentos das imagens

--- a/index.html
+++ b/index.html
@@ -618,7 +618,10 @@
         </a>
       </div>
     </div>
-    <img src="./assets/img/iPhone15.png" alt="">
+    <div class="img-iphone">
+      <img src="./assets/img/iPhone15.png" alt="">
+
+    </div>
   </section>
 
   <footer class="container-2 footer">
